styles and html structure added no img component

--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,2 +1,5 @@
-<p>img works!</p>
-<h1>{{ img }}</h1>
+<div class="img-component-container">
+  <p>Component img</p>
+  <p>img works!</p>
+  <h1>{{ img }}</h1>
+</div>
