comment in app.component created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <body>
   <p>Main</p>
-  <app-img inputImg="Este es el valor que viene del padre"></app-img>
+  <input type="text" [(ngModel)]="imgParent">
+  <p>{{imgParent}}</p>
+
+  <!--Here we call the component img-->
+  <app-img [inputImg]="imgParent"></app-img>
 </body>
