--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,6 +1,5 @@
 <div class="img-component-container">
   <p>Component img</p>
   <p>img works!</p>
-  <h1>{{ img }}</h1>
-  <input type="text">
+  <h1>{{ inputImg }}</h1>
 </div>
