Output and emitter imported

--- a/src/app/components/img/img.component.html
+++ b/src/app/components/img/img.component.html
@@ -1,7 +1,7 @@
 <div class="img-component-container">
   <h2>Img component - child</h2>
   <p>img works!</p>
-  <img [src]="imgUrl" (error)="imgError()" width="200px" *ngIf="imgUrl; else elseImg">
+  <img [src]="imgUrl" (img)="imgLoaded()" (error)="imgError()" width="200px" *ngIf="imgUrl; else elseImg">
   <ng-template #elseImg>
     <img [src]="imageDefault" alt="">
   </ng-template>
