--- a/src/app/components/img/img.component.scss
+++ b/src/app/components/img/img.component.scss
@@ -1,3 +1,7 @@
 .img-component-container {
   background-color: yellowgreen;
+  width: 100%;
+  height: 150px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
 }
