--- a/src/app/components/img/img.component.scss
+++ b/src/app/components/img/img.component.scss
@@ -1,7 +1,6 @@
 .img-component-container {
   background-color: yellowgreen;
   width: 100%;
-  height: 150px;
+  height: auto;
   border-top: 1px solid black;
-  border-bottom: 1px solid black;
 }
